--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,5 +18,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.HAM_TOKEN }}
-          publish_dir: .  # root of your repo if HTML/CSS is there
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: .
